--- a/client/src/Components/SCSS General/variables.scss
+++ b/client/src/Components/SCSS General/variables.scss
@@ -11,6 +11,7 @@ $accentColor: #d6fd92;
   width: 3rem;
   height: 3rem;
   border: 2px solid #888;
+  max-width: 10%;
   &:hover {
     color: white;
     background-color: black;
