--- a/client/src/Components/ItemDisplay/Video/videocontrols.scss
+++ b/client/src/Components/ItemDisplay/Video/videocontrols.scss
@@ -1,4 +1,4 @@
-@import "../SCSS\ General/variables";
+@import "../../SCSS\ General/variables";
 
 #video-container {
   @include flexStyle(column);
@@ -22,7 +22,9 @@
   padding-top: 1%;
   z-index: 1;
   @include flexStyle(row);
-  background-color: #222222ee;
+  background-color: #000;
+  border-bottom: 2px solid white;
+
   color: white;
   transform-origin: top;
   animation: headerAndControls 150ms forwards;
@@ -35,7 +37,8 @@
 }
 
 #video-controls-container {
-  background-color: #222222ee;
+  background-color: #000;
+  border-top: 2px solid white;
   width: 100%;
   height: 25%;
   max-height: 8rem;
