--- a/client/src/Components/Rendering/_renderfiles.scss
+++ b/client/src/Components/Rendering/_renderfiles.scss
@@ -2,11 +2,10 @@
 
 #renderfile--page {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-auto-rows: calc((var(--screen-width) / 8));
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: calc((var(--screen-width) / 11.8));
   grid-gap: 1rem;
-  margin-top: 1rem;
-  margin-inline: 3rem;
+  margin: 1rem;
 }
 
 .renderfile--block {
@@ -24,7 +23,6 @@
 }
 
 #custom-icon-small {
-  color: #ff6e6e;
   position: absolute;
   left: 2%;
   top: 2%;
@@ -50,8 +48,7 @@ text {
 
 .renderfile--text {
   position: absolute;
-  bottom: 2%;
-  padding-bottom: 2%;
+  bottom: 1%;
   width: 95%;
   font-family: akshar;
   font-size: 90%;
@@ -69,7 +66,12 @@ text {
     opacity: 0.2;
   }
 }
-
+#video-icon {
+  position: absolute;
+  width: 20%;
+  bottom: 10%;
+  right: 2%;
+}
 .renderfile--full-icon {
   max-width: 80%;
   max-height: 80%;
@@ -92,8 +94,8 @@ text {
 
 @media screen and (max-width: 1300px) {
   #renderfile--page {
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 3.8));
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 5.8));
   }
 }
 @media screen and (max-width: 900px) {
@@ -105,7 +107,7 @@ text {
 
 @media screen and (max-width: 700px) {
   #renderfile--page {
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: calc(var(--screen-width) / 1.8);
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: calc(100vw / 2.8);
   }
 }
