--- a/client/src/Components/Navbar/Sorting/_sortby.scss
+++ b/client/src/Components/Navbar/Sorting/_sortby.scss
@@ -4,7 +4,7 @@
   @include navbarBtn;
   position: absolute;
   right: 5px;
-  top: 0.4rem;
+  top: 0rem;
   z-index: 1;
   width: 5rem;
 }
@@ -65,11 +65,10 @@
 
 #navbar--asc-desc {
   position: absolute;
+  top: 0;
   right: 5.8rem;
-  top: 0.4rem;
   padding: 3px;
   height: 3rem;
-  font-size: 1.8rem;
   @include flexStyle(row);
 }
 
