--- a/client/src/Components/Rendering/_renderfiles.scss
+++ b/client/src/Components/Rendering/_renderfiles.scss
@@ -22,40 +22,12 @@
   }
 }
 
-#custom-icon-small {
-  position: absolute;
-  left: 2%;
-  top: 2%;
-}
-
-#custom-icon-small-text {
-  letter-spacing: 3px;
-  font-size: 1.4em;
-}
-
-text {
-  font-family: 'bebas neue';
-  letter-spacing: 3.5px;
-}
-
 #renderfile--image-thumbnail,
 #renderfile--video-thumbnail {
   max-height: 80%;
   max-width: 90%;
   position: absolute;
   cursor: pointer;
-}
-
-.renderfile--text {
-  position: absolute;
-  bottom: 1%;
-  width: 95%;
-  font-family: akshar;
-  font-size: 90%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  color: white;
 }
 
 #renderfile--play-icon {
@@ -66,16 +38,16 @@ text {
     opacity: 0.2;
   }
 }
-#video-icon {
-  position: absolute;
-  width: 20%;
-  bottom: 10%;
-  right: 2%;
-}
+
 .renderfile--full-icon {
+  position: absolute;
   max-width: 80%;
   max-height: 80%;
   margin-bottom: 5%;
+}
+
+svg text {
+  font-family: akshar;
 }
 
 @media screen and (max-width: 2000px) {
