--- a/client/src/Components/SCSS General/variables.scss
+++ b/client/src/Components/SCSS General/variables.scss
@@ -3,24 +3,25 @@ $fullscreenHeight: 100vh;
 $accentColor: #d6fd92;
 
 @mixin navbarBtn {
-  background-color: white;
-  color: black;
-  border-radius: 3px;
-  font-size: 1em;
+  color: white;
+  opacity: 0.9;
+  font-size: 1.3em;
   font-family: "bebas neue";
   width: 3rem;
   height: 3rem;
-  border: 2px solid #888;
   max-width: 10%;
+  cursor: pointer;
   &:hover {
-    color: white;
-    background-color: black;
-    border: 2px solid $accentColor;
+    opacity: 1;
+    transform: scale(1.1);
+    transition: 100ms transform, opacity 100ms;
+
   }
   &:disabled {
-    background-color: #444;
-    border: 1.5px solid #222;
     color: #222;
+    cursor: default;
+    transform: scale(1);
+    opacity: 0.3;
   }
 }
 
