--- a/client/src/Components/General/Navbar/Sorting/_sortby.scss
+++ b/client/src/Components/General/Navbar/Sorting/_sortby.scss
@@ -1,4 +1,4 @@
-@import "../../SCSS\ General/variables";
+@import "../../../SCSS\ General/variables";
 
 #navbar--sort-button {
   @include navbarBtn;
@@ -82,7 +82,6 @@
     right: 0;
     top: 0;
     font-size: 50%;
-    border: 1px solid black;
   }
   #filter--list {
     margin-top: 1.8rem;
