--- a/client/src/Components/General/Navbar/_navbar.scss
+++ b/client/src/Components/General/Navbar/_navbar.scss
@@ -1,4 +1,4 @@
-@import '../SCSS\ General/variables';
+@import '../../SCSS\ General/variables';
 
 #navbar--component {
   @include flexStyle(row);
@@ -31,13 +31,6 @@
   background-color: #00000000;
   border: none;
 }
-
-#reload--icon {
-  position: absolute;
-  padding: 0.5rem;
-  right: 1rem;
-}
-
 #navbar--current-directory-header {
   cursor: default;
   background-color: white;
@@ -45,19 +38,19 @@
   top: 3rem;
   @include flexStyle(column);
   align-items: flex-start;
-  padding-left: 0.5rem;
   font-size: 1.1em;
   text-align: left;
   z-index: 5;
   overflow: scroll;
   font-family: Bitter;
   font-weight: bold;
-  padding-left: 1rem;
-  width: 100%;
+  padding-left: 0.5rem;
+  width: max-content;
+  min-width: 100%;
+  height: 1.5rem;
   scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
-    -ms-overflow-style: none;
   }
 }
 
@@ -70,7 +63,6 @@
     max-width: 20%;
     font-size: 50%;
     top: 0;
-    border: 1px solid black;
   }
   #reload--icon {
     right: 0;
