--- a/client/src/Components/ItemDisplay/_display.scss
+++ b/client/src/Components/ItemDisplay/_display.scss
@@ -15,13 +15,13 @@
 
 .viewitem--block {
   @include flexStyle(column);
-  position: absolute;
+  position: fixed;
   left: 0;
   background-color: #0f0f0ff9;
-  width: $fullscreenWidth;
-  height: $fullscreenHeight;
-  top: 0;
-  z-index: 50;
+  width: 100%;
+  height: 100%;
+  top: 2.5%;
+  z-index: 25;
 }
 
 #image-fullscreen {
@@ -37,8 +37,8 @@
   width: $fullscreenWidth;
   object-fit: contain;
   animation: focusImage forwards ease-out 500ms;
-  max-width: 96%;
-  max-height: 96%;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 #button--forwards, #button--backwards {
@@ -76,9 +76,9 @@
 }
 
 .viewitem--close {
-  position: absolute ;
-  top: 1rem;
-  right: 1rem;
+  position: fixed;
+  top: 7%;
+  right: 2%;
   width: 2.5rem;
   height: 2.5rem;
   cursor: pointer;
@@ -92,23 +92,23 @@
 #navigating-indicator {
   display: flex;
   align-items: center;
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
-  width: max-content;
+  position: fixed;
+  left: 2%;
+  top: 7%;
+  width: 3rem;
+  height: 3rem;
 }
 
 #navigating-indicator img {
-  position: absolute;
-  left: 0;
-  top: 50%;
+  position: fixed;
+  left: 2%;
+  top: 7%;
   width: 3rem;
   height: 3rem;
-  z-index: 1;
-  border-radius: 50%;
 }
 
 #navigating-indicator-popup {
+  width: max-content;
   font-family: 'bebas neue';
   font-size: 1.3rem;
   z-index: 1;
@@ -117,9 +117,9 @@
   @include flexStyle(row);
   color: white;
   position: fixed;
-  left: 4.5rem;
+  left: 7%;
   padding-inline: 1.5rem;
-  top: 1rem;
+  top: 7%;
   transform-origin: left;
   transform: scaleX(0);
   transition: width 150ms ease-in-out, transform 150ms ease-in-out;
