--- a/client/src/Components/SCSS General/_general.scss
+++ b/client/src/Components/SCSS General/_general.scss
@@ -8,7 +8,7 @@
 html,
 body {
   background: #444444;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   -webkit-touch-callout: none;
@@ -17,6 +17,11 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  // scrollbar-width: none;
+  // &::-webkit-scrollbar {
+  //   display: none;
+  //   -ms-overflow-style: none;
+  // }
 }
 
 :root {
