--- a/client/src/Components/Rendering/_renderfiles.scss
+++ b/client/src/Components/Rendering/_renderfiles.scss
@@ -7,16 +7,9 @@
   grid-gap: 1%;
   margin: 1%;
   overflow-y: auto;
-  position: fixed;
+  position: absolute;
   height: 90%;
   width: 96%;
-}
-
-#render-page {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100vh;
 }
 
 .renderfile--block {
