--- a/client/src/Components/General/Navbar/Sorting/_sortby.scss
+++ b/client/src/Components/General/Navbar/Sorting/_sortby.scss
@@ -4,63 +4,9 @@
   @include navbarBtn;
   position: absolute;
   right: 5px;
-  top: 0rem;
+  top: 0;
   z-index: 1;
   width: 5rem;
-}
-
-#filter--list {
-  position: absolute;
-  bottom: -20.2rem;
-  right: 0;
-  height: 20rem;
-  width: 20rem;
-  margin: 0;
-  border-radius: 1px;
-  &:hover {
-    color: #000;
-    border: 1.5px solid black;
-  }
-}
-
-.filter--list-item {
-  cursor: pointer;
-  width: 100%;
-  height: 20%;
-  @include flexStyle(column);
-  font-family: "bebas neue";
-  font-size: 1.5rem;
-  &:hover {
-    color: $accentColor;
-  }
-}
-
-#filter--by-folder-first {
-  background-color: #444;
-}
-
-#filter--by-folder-second {
-  background-color: #666;
-}
-
-#filter--by-folder-third {
-  background-color: #888;
-}
-#filter--by-folder-fourth {
-  background-color: #aaa;
-}
-#filter--by-folder-fifth {
-  background-color: #ccc;
-}
-
-.filter--sublist {
-  background-color: #fff;
-  position: absolute;
-  left: -3.2rem;
-  width: 3rem;
-  border: 2px solid black;
-  color: #000;
-  top: 59.5%;
 }
 
 #navbar--asc-desc {
@@ -72,31 +18,6 @@
   @include flexStyle(row);
 }
 
-#navbar--asc-desc img {
-  max-width: 70%;
-}
-
-@media screen and (max-width: 768px) {
-  #navbar--sort-button {
-    width: 3rem;
-    right: 0;
-    top: 0;
-    font-size: 50%;
-  }
-  #filter--list {
-    margin-top: 1.8rem;
-    right: 8rem;
-    width: 50vw;
-    height: 50vh;
-  }
-  .filter--list-item {
-    height: 100%;
-    width: 50vw;
-  }
-  #navbar--asc-desc {
-    right: 10%;
-    top: 0;
-    font-size: 1rem;
-    max-width: 10%;
-  }
+#filter--list {
+  display: none;
 }
