--- a/client/src/Components/SCSS General/variables.scss
+++ b/client/src/Components/SCSS General/variables.scss
@@ -15,11 +15,10 @@ $accentColor: #d6fd92;
     opacity: 1;
     transform: scale(1.1);
     transition: 100ms transform, opacity 100ms;
-
   }
   &:disabled {
     color: #222;
-    cursor: default;
+    cursor: not-allowed;
     transform: scale(1);
     opacity: 0.3;
   }
