--- a/client/src/Components/ItemDisplay/Document/_documentdisplay.scss
+++ b/client/src/Components/ItemDisplay/Document/_documentdisplay.scss
@@ -1,5 +1,16 @@
 @import "../../SCSS\ General/variables.scss";
 
+@keyframes message {
+  0% {
+    opacity: 0;
+    transform: scaleY(0) translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleY(1) translateY(0);
+  }
+}
+
 #viewitem--block-document {
   background-color: #101010fe;
   width: 100%;
@@ -53,4 +64,26 @@
   display: flex;
   flex-direction: row;
   gap: 5px;
+}
+
+#document--message {
+  color: black;
+  font-size: 2rem;
+  font-family: 'bebas neue';
+  position: fixed;
+  z-index: 100;
+  bottom: 3%;
+  width: 35%;
+  max-width: 40rem;
+  cursor: pointer;
+  height: 15%;
+  max-height: 10rem;
+  @include flexStyle(row);
+  animation: 200ms forwards ease-in-out message;
+  background: repeating-radial-gradient(
+    $accentColor 0%,
+    $accentColor 30%,
+    rgba(0,0,0, 0) 65%,
+    rgba(0,0,0, 0) 100%
+  );
 }
