--- a/client/src/Components/ItemDisplay/_display.scss
+++ b/client/src/Components/ItemDisplay/_display.scss
@@ -1,18 +1,5 @@
 @import '../SCSS\ General/variables';
 
-@keyframes focusImage {
-  0% {
-      position: absolute;
-      opacity: 0.4;
-      transform: scale(0%);
-  }
-  100% {
-      opacity: 1;
-      position: absolute;
-      transform: scale(100%);
-  }
-}
-
 .viewitem--block {
   @include flexStyle(column);
   position: fixed;
@@ -20,7 +7,7 @@
   background-color: #0f0f0ff9;
   width: 100%;
   height: 100%;
-  top: 2.5%;
+  top: 0;
   z-index: 25;
 }
 
@@ -36,15 +23,16 @@
   height: $fullscreenHeight;
   width: $fullscreenWidth;
   object-fit: contain;
-  animation: focusImage forwards ease-out 500ms;
   max-width: 90%;
   max-height: 90%;
 }
 
 #button--forwards, #button--backwards {
-  position: absolute;
-  z-index: 1;
-  height: 3rem;
+  position: fixed;
+  z-index: 26;
+  height: 2%;
+  max-height: 3rem;
+  min-height: 0.5rem;
   cursor: pointer;
   top: calc(50vh - 1.5rem);
 }
@@ -57,34 +45,16 @@
   left: 1rem;
 }
 
-#viewitem--block-document {
-  background-color: #101010fe;
-  width: 100%;
-  min-height: 100%;
-}
-
-#viewitem--document {
-  top: 3rem;
-  text-align: left;
-  font-size: 1.5rem;
-  color: white;
-  margin: 1rem;
-  border: none;
-  outline: none;
-  background-color: #222;
-  height: calc(100vh - 5rem);
-}
-
 .viewitem--close {
   position: fixed;
-  top: 7%;
-  right: 2%;
-  width: 2.5rem;
-  height: 2.5rem;
-  cursor: pointer;
-  z-index: 51;
+  top: 1%;
+  right: 1%;
+  width: 3%;
+  max-width: 2.5rem;
+  aspect-ratio: 1;
+  z-index: 26;
   &:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: 100ms ease-in;
   }
 }
@@ -93,18 +63,17 @@
   display: flex;
   align-items: center;
   position: fixed;
-  left: 2%;
-  top: 7%;
-  width: 3rem;
-  height: 3rem;
+  left: 1%;
+  top: 1%;
+  width: 3%;
+  max-width: 2.5rem;
+  aspect-ratio: 1;
+  z-index: 26;
 }
 
 #navigating-indicator img {
-  position: fixed;
-  left: 2%;
-  top: 7%;
-  width: 3rem;
-  height: 3rem;
+  position: absolute;
+  width: 100%;
 }
 
 #navigating-indicator-popup {
@@ -113,13 +82,13 @@
   font-size: 1.3rem;
   z-index: 1;
   background-color: black;
-  height: 3rem;
+  height: 100%;
   @include flexStyle(row);
   color: white;
-  position: fixed;
-  left: 7%;
-  padding-inline: 1.5rem;
-  top: 7%;
+  position: absolute;
+  left: 125%;
+  padding: 5% 1.5rem 0 1.5rem;
+  top: 2%;
   transform-origin: left;
   transform: scaleX(0);
   transition: width 150ms ease-in-out, transform 150ms ease-in-out;
@@ -129,4 +98,72 @@
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
   transform: scaleX(1);
+}
+
+#confirmexit--body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 50;
+  background-color: #11111188;
+  @include flexStyle(row);
+  * {
+    font-family: 'bebas neue'
+  }
+  p {
+    color: white;
+    font-family: 'akshar';
+    font-size: 3rem;
+    position: relative;
+    top: -5%;
+    left: 45%;
+    opacity: 0.5;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.2);
+      opacity: 1;
+      transition: transform 100ms ease-in-out, opacity 300ms ease-in-out;
+    }
+  }
+}
+
+#confirmexit--popup {
+  @include flexStyle(column);
+  width: 35%;
+  aspect-ratio: 5/3;
+  background-color: black;
+  outline: inset darkgreen;
+  border-radius: 1rem;
+  h1 {
+    margin-inline: 1rem;
+    font-size: 2.2rem;
+    text-align: center;
+    color: white;
+  }
+  button {
+    position: relative;
+    aspect-ratio: 5/2;
+    width: 30%;
+    font-size: 1.2em;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+    opacity: 0.7;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  #left {
+    bottom: -15%;
+    left: -25%;
+    background-color: red;
+  }
+  #right {
+    bottom: 5%;
+    right: -25%;
+    background-color: green;
+  }
 }
