--- a/client/src/Components/SCSS General/_general.scss
+++ b/client/src/Components/SCSS General/_general.scss
@@ -3,11 +3,16 @@
   font: 1rem 'Times New Roman';
   margin: 0;
   padding: 0;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
+  }
 }
 
 html,
 body {
-  background: #444444;
+  background: #444;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -17,11 +22,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  // scrollbar-width: none;
-  // &::-webkit-scrollbar {
-  //   display: none;
-  //   -ms-overflow-style: none;
-  // }
+  position: relative;
 }
 
 :root {
