--- a/client/src/Components/ItemDisplay/Document/_documentdisplay.scss
+++ b/client/src/Components/ItemDisplay/Document/_documentdisplay.scss
@@ -67,6 +67,11 @@
   gap: 5px;
 }
 
+#document--name {
+  font-family: 'roboto slab';
+  color: white;
+  
+}
 #document--message {
   color: black;
   font-size: 2rem;
