--- a/client/src/Components/SCSS General/_general.scss
+++ b/client/src/Components/SCSS General/_general.scss
@@ -3,11 +3,11 @@
   font: 1rem 'Times New Roman';
   margin: 0;
   padding: 0;
-  scrollbar-width: none;
-  &::-webkit-scrollbar {
-    display: none;
-    -ms-overflow-style: none;
-  }
+  // scrollbar-width: none;
+  // &::-webkit-scrollbar {
+  //   display: none;
+  //   -ms-overflow-style: none;
+  // }
 }
 
 html,
