--- a/client/src/Components/Main/MainSCSS/_variables.scss
+++ b/client/src/Components/Main/MainSCSS/_variables.scss
@@ -12,7 +12,7 @@ $accentColor: #d6fd92;
   max-width: 10%;
   cursor: pointer;
   img {
-    max-width: 50%;
+    max-width: 60%;
   }
   &:hover {
     opacity: 1;
@@ -37,4 +37,6 @@ $accentColor: #d6fd92;
 @mixin maxSize {
   width: 100%;
   height: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
