--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -1,17 +1,25 @@
 @import "../../Main/MainSCSS/variables.scss";
 
-#renderfile--page {
+#renderitem--page {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: calc((var(--screen-width) / 11.8));
-  grid-gap: 1%;
-  margin: 1%;
+  grid-gap: 0.7%;
   overflow-y: auto;
   position: absolute;
   height: 90%;
-  width: 96%;
-  padding-top: 2rem;
-  .renderfile--block {
+  width: 98%;
+  overflow-x: hidden;
+  top: 5rem;
+  padding: 0 1% 10rem 1%;
+  & > h1 {
+    font-size: 3rem;
+    color: #ccc;
+    font-family: 'roboto flex';
+    width: 100vw;
+    text-align: center;
+  }
+  .renderitem--block {
     position: relative;
     @include flexStyle(column);
     width: 100%;
@@ -23,27 +31,30 @@
       background-color: #222222;
       border: 1.5px solid $accentColor;
     }
-    #renderfile--play-icon {
+    .renderitem--play-icon {
       width: 20%;
+      object-fit: contain;
       position: absolute;
       cursor: pointer;
       &:hover {
         opacity: 0.2;
       }
     }
-    .renderfile--thumbnail {
+    .renderitem--thumbnail {
+      object-fit: contain;
       max-height: 80%;
       max-width: 90%;
       position: absolute;
       cursor: pointer;
     }
-    .renderfile--full-icon {
+    .renderitem--full-icon {
+      object-fit: contain;
       position: absolute;
       max-width: 80%;
       max-height: 80%;
       margin-bottom: 5%;
     }
-    #custom-icon-text {
+    .custom-icon-text {
       font-family: "bebas neue";
       font-size: 1.3em;
       letter-spacing: 2px;
@@ -53,34 +64,34 @@
 }
 
 @media screen and (max-width: 2000px) {
-  #renderfile--page {
+  #renderitem--page {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: calc((var(--screen-width) / 5.8));
   }
 }
 
 @media screen and (max-width: 1600px) {
-  #renderfile--page {
+  #renderitem--page {
     grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: calc((var(--screen-width) / 4.8));
   }
 }
 
 @media screen and (max-width: 1300px) {
-  #renderfile--page {
+  #renderitem--page {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: calc((var(--screen-width) / 5.8));
   }
 }
 @media screen and (max-width: 900px) {
-  #renderfile--page {
+  #renderitem--page {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: calc((var(--screen-width) / 2.8));
   }
 }
 
 @media screen and (max-width: 700px) {
-  #renderfile--page {
+  #renderitem--page {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: calc(100vw / 2.8);
   }
