--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_video.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_video.scss
@@ -1,4 +1,4 @@
-@import '../../Main/MainSCSS/variables';
+@import "../../Main/MainSCSS/variables";
 
 #video-container {
   @include flexStyle(column);
@@ -30,9 +30,8 @@
 }
 
 #video-header-filename {
-  font-family: 'akshar';
+  font-family: "akshar";
   text-anchor: middle;
-  font-size: 1em;
 }
 
 #video-controls-container {
@@ -46,41 +45,33 @@
   z-index: 1;
   transform-origin: bottom;
   animation: headerAndControls 150ms forwards;
-}
-
-#controls {
-  position: absolute;
-  bottom: 10%;
-  width: 100%;
-  @include flexStyle(row);
-  justify-content: space-around;
-}
-
-#play-pause,
-#mini-player,
-#playback-speed,
-#full-screen-control {
-  height: 3rem;
-  width: 3rem;
-  max-width: 20%;
-  max-height: 20%;
-  background-color: #00000000;
-  border:none;
-}
-
-#mini-player img,
-#play-pause img,
-#timeline-control img,
-#volume-control img,
-#full-screen-control img {
-  width: 100%;
-  height: 100%;
-  opacity: 0.85;
-  &:hover {
-    opacity: 1;
-   transform: scale(1.1);
-   transition: transform 100ms ease-out, opacity 100ms;
-   cursor: pointer;
+  #controls {
+    position: absolute;
+    bottom: 10%;
+    width: 100%;
+    @include flexStyle(row);
+    justify-content: space-around;
+    #play-pause,
+    #mini-player,
+    #full-screen-control {
+      height: 3rem;
+      width: 3rem;
+      max-width: 20%;
+      max-height: 20%;
+      background-color: #00000000;
+      border: none;
+      img {
+        width: 100%;
+        height: 100%;
+        opacity: 0.85;
+        &:hover {
+          opacity: 1;
+          transform: scale(1.1);
+          transition: transform 100ms ease-out, opacity 100ms;
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
 
@@ -107,13 +98,13 @@
   transition: width 150ms ease-in-out, transform 150ms ease-in-out;
 }
 
-#volume-container:hover #volume-slider, #volume-slider:focus-within {
+#volume-container:hover #volume-slider,
+#volume-slider:focus-within {
   transform: scaleX(1);
   border: 5px solid white;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
 }
-
 
 #volume-slider::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -144,35 +135,27 @@
   border-radius: 2rem;
 }
 
-#duration-container {
+#duration-container, #playback-speed {
   @include flexStyle(row);
   height: 3rem;
   width: 12rem;
   max-width: 20%;
+  text {
+    color: #fff;
+    font-family: "bebas neue";
+    font-size: 1.1em;
+  }
 }
 
-#duration-container text,
-#playback-speed text{
-  color: #fff;
-  font-family: "bebas neue";
-  font-size: 1.1em;
+#playback-speed {
+  width: 6rem;
+  max-width: 10%;
 }
 
-#volume-container {
-  @include flexStyle(row);
-}
-
-#volume-control {
-  min-width: 100%;
-}
 #viewitem--video {
-  max-height: 100%;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   object-fit: contain;
-}
-
-.control--icon {
-  height: 20px;
 }
 
 #timeline {
