--- a/client/src/Components/Tools/ToolsSCSS/_savedocument.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_savedocument.scss
@@ -1,5 +1,14 @@
-@import '../../Main/MainSCSS/variables';
+@import "../../Main/MainSCSS/variables";
 
+@keyframes message {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+ 
 #confirmexit--body {
   @include maxSize;
   position: fixed;
@@ -11,7 +20,7 @@
   * {
     font-family: "bebas neue";
   }
-  p {
+  & > p {
     color: white;
     font-family: "akshar";
     font-size: 2rem;
@@ -65,4 +74,28 @@
     right: -25%;
     background-color: green;
   }
+}
+
+#document--message {
+  font: {
+    family: 'bebas neue';
+    size: 1rem;
+  };
+  color: black;
+  position: fixed;
+  z-index: 25;
+  bottom: 3%;
+  width: 35%;
+  max-width: 40rem;
+  cursor: pointer;
+  height: 15%;
+  max-height: 10rem;
+  @include flexStyle(row);
+  animation: 200ms forwards ease-in-out message;
+  background: repeating-radial-gradient(
+    $accentColor 0%,
+    $accentColor 30%,
+    rgba(0, 0, 0, 0) 65%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
