--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_directorytree.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_directorytree.scss
@@ -94,8 +94,8 @@
         border: 1.5px solid white;
         transition: 200ms ease-out;
       }
-      .folder--icon {
-        width: 1.3em;
+      .directory--icon {
+        width: 1.1em;
         margin-right: 5px;
       }
       .tree--arrow {
