--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_display.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_display.scss
@@ -4,34 +4,12 @@
   0% {
     position: absolute;
     opacity: 0.4;
-    transform: scale(0%);
+    transform: scale(0);
   }
   100% {
-    opacity: 1;
     position: absolute;
-    transform: scale(100%);
-  }
-}
-
-@keyframes fromRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-  100% {
     opacity: 1;
-    transform: translateX(0%);
-  }
-}
-
-@keyframes fromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
+    transform: scale(1);
   }
 }
 
@@ -49,15 +27,7 @@
     object-fit: contain;
     max-width: 95%;
     max-height: 95%;
-    &.loaded {
-      animation: loadDisplay forwards ease-out 500ms;
-    }
-    &.fromright {
-      animation: fromRight 500ms forwards ease-in-out;
-    }
-    &.fromleft {
-      animation: fromLeft 500ms forwards ease-in-out;
-    }
+    animation: loadDisplay ease-out 500ms;
   }
 }
 
