--- a/client/src/Components/Main/MainSCSS/_navbar.scss
+++ b/client/src/Components/Main/MainSCSS/_navbar.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+@import "./variables.scss";
 
 #navbar--component {
   @include flexStyle(row);
@@ -6,7 +6,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: #111;
+  background-color: rgb(16, 16, 16);
   height: 2.5rem;
   width: 100%;
   h1 {
