reworked document editing. added ability to delete and rename files

--- a/client/src/Components/Main/MainSCSS/_general.scss
+++ b/client/src/Components/Main/MainSCSS/_general.scss
@@ -1,6 +1,8 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  font: 1rem 'Times New Roman';
+  font: 1rem "Times New Roman";
   margin: 0;
   padding: 0;
   // scrollbar-width: none;
