--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
@@ -1,4 +1,4 @@
-@import '../../Main/MainSCSS/variables.scss';
+@import "../../Main/MainSCSS/variables.scss";
 
 #document--body {
   background-color: #101010fe;
@@ -20,7 +20,7 @@
     position: absolute;
     max-width: 96%;
     padding: 4rem 1.5rem 3rem 1.5rem;
-    max-height: 92%; 
+    max-height: 92%;
     top: 4rem;
     text-align: left;
     font-size: 1.1rem;
@@ -54,4 +54,28 @@
       background-color: #333;
     }
   }
+}
+
+#document--message {
+  font: {
+    family: "bebas neue";
+    size: 2rem;
+  }
+  color: black;
+  position: fixed;
+  z-index: 25;
+  bottom: 3%;
+  width: 35%;
+  max-width: 40rem;
+  cursor: pointer;
+  height: 15%;
+  max-height: 10rem;
+  @include flexStyle(row);
+  animation: 200ms forwards ease-in-out message;
+  background: repeating-radial-gradient(
+    $accentColor 0%,
+    $accentColor 30%,
+    rgba(0, 0, 0, 0) 65%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
