--- a/client/src/Components/Tools/ToolsSCSS/_sortby.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_sortby.scss
@@ -42,7 +42,7 @@
       width: 100%;
       border-top: 0.75px solid white;
       border-bottom: 1.5px solid white;
-      height: 20%;
+      height: calc(1 / 6 * 100%);
     }
     ol {
       list-style: none;
