--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_video.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_video.scss
@@ -23,6 +23,7 @@
   @include flexStyle(column);
   position: relative;
   animation: none;
+  background-color: black;
   #viewitem--video {
     @include maxSize;
   }
