--- a/client/src/Components/Tools/ToolsSCSS/_contextmenu.scss
+++ b/client/src/Components/Tools/ToolsSCSS/_contextmenu.scss
@@ -1,10 +1,10 @@
 @import "../../Main/MainSCSS/variables";
 
-#context-menu {
+#menu {
   height: 15rem;
   width: 15rem;
   background-color: #fff;
-  position: fixed;
+  position: absolute;
   z-index: 50;
   button {
     width: 100%;
@@ -15,7 +15,8 @@
     background-color: #222;
     color: white;
     border-top: 0.75px solid white;
-    border-bottom: 1.5px solid white;
+    border-bottom: 0.75px solid white;
+    border-inline: 1.5px solid white;
     &:hover {
       cursor: pointer;
       color: $accentColor;
