--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_renderitems.scss
@@ -15,7 +15,7 @@
   & > h1 {
     font-size: 3rem;
     color: #ccc;
-    font-family: 'roboto flex';
+    font-family: "roboto flex";
     width: 100vw;
     text-align: center;
   }
