--- a/client/src/Components/Main/MainSCSS/_variables.scss
+++ b/client/src/Components/Main/MainSCSS/_variables.scss
@@ -8,7 +8,6 @@ $accentColor: #d6fd92;
   font-size: 1.1em;
   font-family: "bebas neue";
   height: 2.5rem;
-  aspect-ratio: 5/6;
   max-width: 10%;
   cursor: pointer;
   img {
@@ -34,9 +33,9 @@ $accentColor: #d6fd92;
   justify-content: center;
 }
 
-@mixin maxSize {
+@mixin maxSize($important: "") {
   width: 100%;
   height: 100%;
-  max-height: 100%;
-  max-width: 100%;
+  max-height: 100% $important;
+  max-width: 100% $important;
 }
