--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_document.scss
@@ -2,14 +2,11 @@
 
 #document--body {
   background-color: #101010fe;
-  width: 100%;
-  height: 100%;
-  padding-bottom: 15%;
   #document--header {
     position: absolute;
     height: 2rem;
     top: 4rem;
-    width: 96%;
+    width: 100%;
     padding: 5px;
     z-index: 1;
     display: flex;
@@ -17,41 +14,32 @@
     gap: 5px;
   }
   #document {
-    position: absolute;
-    max-width: 96%;
-    padding: 4rem 1.5rem 3rem 1.5rem;
-    max-height: 92%;
-    top: 4rem;
-    text-align: left;
-    font-size: 1.1rem;
-    line-height: 1.3em;
-    color: white;
-    border: none;
-    outline: none;
-    resize: none;
-    cursor: default;
-    letter-spacing: 0.3px;
-    background-color: #222;
-    font-family: akshar;
-    &:focus {
-      outline-color: $accentColor;
-      outline-style: outset;
-      cursor: initial;
-    }
-    &::selection {
-      background-color: #ac4df666;
-      color: white;
-      cursor: pointer;
-    }
-    &:disabled {
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      color: #999;
-      background-color: #333;
+    div {
+      margin: 5rem auto 1rem auto;
+      padding: 4rem 3rem;
+      height: 90%;
+      aspect-ratio: 210/297;
+      background-color: #222;
+      textarea {
+        color: white;
+        letter-spacing: 0.3px;
+        font-family: akshar;
+        display: block;
+        // overflow: hidden;
+        border: none;
+        outline: none;
+        resize: none;
+        background-color: #222;
+        @include maxSize;
+        &:focus {
+          cursor: initial;
+        }
+        &::selection {
+          background-color: #ac4df666;
+          color: white;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
