--- a/client/src/Components/RenderDirectoryItems/RenderSCSS/_video.scss
+++ b/client/src/Components/RenderDirectoryItems/RenderSCSS/_video.scss
@@ -1,14 +1,5 @@
 @import "../../Main/MainSCSS/variables";
 
-@keyframes headerAndControls {
-  0% {
-    transform: scaleY(0);
-  }
-  100% {
-    transform: scaleY(1);
-  }
-}
-
 @keyframes minifyPlayer {
   0% {
     position: fixed;
@@ -43,8 +34,6 @@
     rgba(0, 0, 0, 0) 100%
   );
   color: white;
-  transform-origin: top;
-  animation: headerAndControls 150ms forwards;
   text {
     font-size: 0.65rem;
   }
@@ -69,9 +58,9 @@
   position: absolute;
   bottom: 0;
   z-index: 1;
-  transform-origin: bottom;
-  animation: headerAndControls 150ms forwards;
   #controls {
+    transform-origin: bottom;
+    animation: headerAndControls 150ms ease-in-out forwards;
     position: absolute;
     bottom: 15%;
     width: 100%;
@@ -236,35 +225,17 @@
 
 .mini-player-body {
   background-color: #00000000;
-  width: auto;
-  height: auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   animation: minifyPlayer forwards linear 1500ms;
-  #left-side-controls {
-    width: 45% !important;
-    @include flexStyle(row);
-    bottom: -7.5px !important;
-    #duration-container {
-      width: 100% !important;
-    }
-  }
-  .control--button {
-    height: 1.3rem !important;
-    width: 1.3rem !important;
-  }
-  #mini-player-button {
-    img {
-      width: 130% !important;
-      height: 130% !important;
-    }
-  }
+  pointer-events: none;
   .viewitem--item {
+    pointer-events: all;
     max-height: 100%;
     max-width: 100%;
-  }
-  .mini-player {
-    position: absolute;
-    top: 0;
-    left: 0;
-    aspect-ratio: 1;
+    position: absolute !important;
+    bottom: 0;
+    right: 0;
   }
 }
